@@ -6,8 +6,11 @@ import java.util.stream.Collectors;
 // BEGIN
 public class App {
     public static List<String> buildApartmentsList(List<Home> objects, int n) {
-        objects.sort((o1, o2) -> o1.compareTo(o2));
-        return objects.stream().map(o -> o.toString()).limit(n).collect(Collectors.toList());
+        return objects.stream()
+                .sorted(Home::compareTo)
+                .map(Home::toString)
+                .limit(n)
+                .toList();
     }
 }
 // END
